# The-Scrapper

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: job_example.yaml  job_quotes.yaml
plugins/: __init__.py
plugins/example_site/: __init__.py  article_title_async.py  quotes_sync.py
scrapper/: __init__.py  config.py  engine.py  exceptions.py  logging.py  registry.py
scrapper/http/: __init__.py  clients.py  policies.py
scrapper/monitoring/: __init__.py  metrics.py
scrapper/normalization/: __init__.py  registry.py
scrapper/plugins/: __init__.py  base.py
scrapper/schemas/: __init__.py  example_article_v1.py  example_quote_v1.py
scrapper/sinks/: __init__.py  sqlite.py
scrapper_cli/: __init__.py  main.py
